# TrailsOfThePharaoh

./: .gitignore  CMakeLists.txt  README.md  process-palette.json
include/: audio.h  config.h  gamehelper.h  glmhelper.h  input.h  timer.h
resources/buildscripts/linux/: README.md  debug.sh  debugOpenGL.sh  debugVulkan.sh  release.sh  releaseOpenGL.sh  releaseVulkan.sh
resources/buildscripts/windows/: README.md  debugOpenGL.bat  debugVulkan.bat  releaseOpenGL.bat  releaseVulkan.bat
resources/dialogue/: 0.txt  end.txt
resources/maps/: 1-two-movers.tmx  10-5-interim.tmx  10-mirror-hold-intro.tmx  11-mirror-hold-ext.tmx  2-simple-movers-puzzle.tmx  3-split-intro.tmx  4-split-two.tmx  5-5-tilter-intermission.tmx  5-tilters.tmx  6-more-tilters.tmx  7-light-hold-intro.tmx  8-light-hold-quick.tmx  9-25-split-on-off-intro.tmx  9-5-mirror-hold-intro.tmx  9-three-hold.tmx  myTilemapPadded.tsx  tempTileset.tsx  testMap.tmx  testMap2.tmx  testMap3.tmx  testMap4.tmx  testMap5.tmx  testTiles.tsx
resources/models/: testScene.fbx
resources/shaders/opengl/: 3D-lighting.vert  blinnphong.frag  flat.frag  flat.vert
resources/shaders/vulkan/: blinnphong.frag  fflat.spv  final.frag  flat.frag  flat.vert  vflat.spv
resources/textures/: Story - Shortcut.lnk
src/: app.cpp  app.h  camera.cpp  camera.h  glm-include.h  main.cpp  renderer-include.h
src/game/: map.cpp  map.h  tiled.cpp  tiled.h
src/game/map/: level.cpp  level.h  logical.cpp  logical.h  map.cpp  map.h  tiled.cpp  tiled.h  visual.cpp  visual.h
src/game/map/elements/: door_switch.h  light_ray.cpp  light_ray.h  light_switch.h  mover.cpp  mover.h  raySwitch.h  ray_switch.h  tilter.cpp  tilter.h
src/game/sprites/: sprite.cpp  sprite.h
src/game/sprites/UI/: button.cpp  button.h  cutscene_manager.cpp  cutscene_manager.h  dialogue_system.cpp  dialogue_system.h  text_button.h
src/opengl-render/: glad.c  render.cpp  render.h  shader.cpp  shader.h
src/opengl-render/resources/: font_loader.cpp  font_loader.h  model_loader.cpp  model_loader.h  resources.h  texture_loader.cpp  texture_loader.h  vertex_data.cpp  vertex_data.h
src/vulkan-render/: descriptor_sets.h  model_loader.cpp  model_loader.h  render.cpp  render.h  resources.h  stb_image.cpp  texfont.cpp  texfont.h  texture_loader.cpp  texture_loader.h  vkhelper.cpp  vkinit.cpp  vkinit.h
